--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -38,6 +38,9 @@ body{
 	    box-shadow: 0 0.2rem 0.2rem rgba(0,0,0,0.16);
 	    z-index: 999;
 	}
+	.inner_content{
+		margin-top: 3.466667rem;
+	}
 	.header-phone a{
 	    display: block;
 	    width:1.6rem;
@@ -267,6 +270,9 @@ body{
 	    overflow: hidden;
 	    margin: 0 auto;
 	    max-width: 1366px;
+	}
+	.inner_content{
+	    margin-top: 1.733333rem;
 	}
 	.clear-margin{
 		margin: 0 !important;
