--- a/stucampus/static/styles/articles/article-pc.css
+++ b/stucampus/static/styles/articles/article-pc.css
@@ -205,26 +205,27 @@ body{
     text-decoration: none;
     color: rgba(0,0,0,0.54);
     line-height: 0.8rem;
+    white-space: nowrap;
 }
-.sharebox a:nth-of-type(3) span{
+.sharebox a:nth-of-type(4) span{
     left: 0.1rem;
     width: auto;
 }
-.sharebox a:nth-of-type(4) span{
+.sharebox a:nth-of-type(5) span{
     left: -0.4rem;
     width: auto;
 }
-.sharebox a:nth-of-type(2){
+.sharebox a:nth-of-type(3){
     position: absolute;
     left: 14.66667rem;
     top: 1.26667rem;
 }
-.sharebox a:nth-of-type(3){
+.sharebox a:nth-of-type(4){
     position: absolute;
     left: 19.733334rem;
     top: 1.26667rem;
 }
-.sharebox a:nth-of-type(4){
+.sharebox a:nth-of-type(5){
     position: absolute;
     left: 24.8rem;
     top: 1.26667rem;
