--- a/stucampus/static/styles/articles/duoshuo.css
+++ b/stucampus/static/styles/articles/duoshuo.css
@@ -9,7 +9,7 @@
     display: block;
     height: auto;
     padding: 1.6rem 0 0 0;
-    border-bottom: 0.066667rem solid rgba(0,0,0,0.08);
+    border-bottom: 1px solid rgba(0,0,0,0.08);
 }
 .user_info{
     display: block;
@@ -77,7 +77,64 @@
     display: block;
     margin: 1.6rem 0.5333rem;
 }
+.background{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 25rem;
+    height: 100%;
+    background-color: rgba(0,0,0,0.24);
+    z-index: 1000;
+}
 @media screen and (max-width: 767px){
+    .ds-dialog-inner{
+        position: fixed;
+        top: 35%;
+        left: 4.3333rem;
+        padding: 1.6rem;
+        width:13.1333rem;
+        height: 13.2rem;
+        background-color: rgba(255,255,255,0.87);
+        z-index: 1001;
+        box-shadow: 0 0.333rem 0.333rem rgba(0,0,0,0.22);
+    }
+    .ds-dialog-inner b{
+        font-family: "SourceHanSans-Blod","Roboto-Blod","Microsoft YaHei" ;
+        font-size: 0.8rem;
+        letter-spacing: 1.8px;
+        color: rgb(91,197,190);
+    }
+    .ds-dialog-inner input{
+        margin-top: 1.6rem;
+        font-family: "SourceHanSans-Light","Roboto-Light","Microsoft YaHei" ;
+        width: 13.1333rem;
+        height: 3.2rem;
+        color: rgba(0,0,0,0.87);
+        font-size: 0.9333rem;
+        background-color: rgba(255,255,255,0);
+        z-index: 200;
+        border-bottom: 1px solid rgb(91,197,190);
+    }
+    .ds-dialog-inner input:nth-of-type(2){
+        margin-top: 0;
+    }
+    .ds-dialog-inner a{
+        position: relative;
+        right: -0.5333rem;
+        display: block;
+        margin-top: 1.6rem;
+        width: 4.13333rem;
+        height: 2.4rem;
+        line-height: 2.4rem;
+        text-align: center;
+        font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei" ;
+        color: rgb(91,197,190);
+        font-size: 0.9333rem;
+        text-decoration: none;
+        float: right;
+        letter-spacing: 5.4px;
+    }
     .add-comment{
         display: none;
         position: absolute;
@@ -125,21 +182,45 @@
     .ds-dialog-inner{
         position: fixed;
         top: 40%;
-        left: 40%;
+        left: 35%;
         padding: 0.8rem;
         width:10.6667rem;
         height: 7.46667rem;
         background-color: rgba(255,255,255,0.87);
         z-index: 200;
     }
-    .ds-dialog-inner p{
+    .ds-dialog-inner b{
         font-family: "SourceHanSans-Blod","Roboto-Blod","Microsoft YaHei" ;
+        font-size: 0.8rem;
+        letter-spacing: 1.8px;
+        color: rgb(91,197,190);
     }
     .ds-dialog-inner input{
+        margin-top: 0.8rem;
+        font-family: "SourceHanSans-Light","Roboto-Light","Microsoft YaHei" ;
         width:10.6667rem;
         height: 1.6rem;
+        color: rgba(0,0,0,0.87);
+        font-size: 0.6rem;
         background-color: rgba(255,255,255,0);
         z-index: 200;
+        border-bottom: 1px solid rgb(91,197,190);
+    }
+    .ds-dialog-inner a{
+        position: relative;
+        right: -0.26667rem;
+        display: block;
+        margin-top: 0.8rem;
+        width: 4.1333rem;
+        height: 1.2rem;
+        line-height: 1.2rem;
+        text-align: center;
+        font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei" ;
+        color: rgb(91,197,190);
+        font-size: 0.6rem;
+        text-decoration: none;
+        float: right;
+        letter-spacing: 5.4px;
     }
     .add-comment{
         position: absolute;
