--- a/stucampus/static/styles/articles/duoshuo.css
+++ b/stucampus/static/styles/articles/duoshuo.css
@@ -82,7 +82,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 25rem;
+    width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.24);
     z-index: 1000;
