--- a/stucampus/templates/articles/article-display.html
+++ b/stucampus/templates/articles/article-display.html
@@ -85,7 +85,7 @@
                         console.log(Data);
                 }
                 else{
-                    StuCampus.alert("请补全您的姓名和邮箱.");
+                    StuCampus.alert("请补全您的姓名和邮箱.",5000);
                 }
                 $.post(posturl,Data,function(result,status){
                     if(status=='success'){
@@ -97,6 +97,7 @@
                             $(".ds-thread").prepend('<div class="comments"><a class="user_info" href='+userurl+'><img class="avatar" src='+useravatarurl+'><p class="name" >'+result["response"]["author"]["name"]+'</p><p class="c_createtime">'+result["response"]["created_at"]+'</p><a class="reply" href="javascript:void(0)"><img src="/static/images/index/reply_32.png"><p>回复</p></a><a class="like" href="javascript:void(0)"><img src="/static/images/index/unfavorite_32.png"><p>'+result['response']['likes']+'</p></a></a><span class="message">'+result["response"]["message"]+'</span></div>');
                             $(".add-comment").removeClass("appear");
                             $(".addcomment").val("");
+                            $(".add-comment").addClass("scale1");
                         }
                     }
                     else{
