修复窗口太小导致banner出现移位问题

--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -45,7 +45,7 @@
        }); 
     });
 </script>
-<body>
+<body style="min-width:300px;">
 
 <div class="inner_body">
     <div class="header-phone">
